--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import "utilities.css";
 
 :root {
-  --primary: #3dcfd3;
+  --primary: #f9ae41;
   --dark: #161616;
   --pure: #ffffff;
   --ternary: #898989;
@@ -20,11 +20,21 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+.container {
+  max-width: 100vw;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
 header {
   background-color: var(--pure);
   position: fixed;
+  top: 0;
+  left: 0;
   width: 100vw;
-  /* clip-path: polygon(0 0, 100% 0, 100% 100%, 70% 87%, 0 100%); */
+  height: 70px;
+  z-index: 9999;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
 }
 
 .container {
@@ -57,6 +67,182 @@ header nav .left a:hover {
   color: var(--primary);
 }
 
-.section {
-  background-color: var(--ternary);
+.carousel-container {
+  max-width: 100vw;
+  height: 500px;
+  position: relative;
+  margin-top: 70px !important;
+  margin: auto;
+}
+
+.navigation .prev {
+  position: absolute;
+  z-index: 10;
+  font-size: 25px;
+  top: 40%;
+  font-weight: 700;
+}
+.navigation .next {
+  right: 0px;
+  position: absolute;
+  font-size: 25px;
+  z-index: 10;
+  top: 40%;
+}
+.navigation .nav-btn {
+  background: rgba(255, 255, 255, 0.3);
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 30px 20px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
+}
+.navigation .nav-btn:hover {
+  background: white;
+}
+
+.carousel {
+  transition: all 0.3s ease;
+}
+.carousel img {
+  max-width: 100%;
+  object-fit: cover;
+  transition: all 0.3s ease;
+}
+
+.item {
+  position: absolute;
+  display: none;
+}
+
+.main {
+  display: block;
+}
+
+section {
+  padding: 4rem 0;
+}
+
+.section-heading {
+  color: var(--secondary);
+  text-align: center;
+  margin-bottom: 1rem;
+  line-height: 0.5;
+}
+
+.section-heading span {
+  color: var(--primary);
+}
+
+.section-heading + p {
+  color: var(--ternary);
+  font-family: "Lato", sans-serif;
+  margin-bottom: 4rem;
+  text-align: center;
+}
+
+section.work {
+  background: var(--pure);
+}
+
+section.work .card-wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 2rem;
+}
+
+section.work .card-wrapper .card {
+  position: relative;
+  height: 200px;
+}
+
+section.work .card-wrapper .card .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(249, 174, 65, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: var(--light);
+  opacity: 0;
+  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+}
+
+section.work .card-wrapper .card:hover .overlay {
+  opacity: 1;
+  cursor: pointer;
+}
+
+section.work .card-wrapper .card .overlay a {
+  color: var(--secondary);
+  text-decoration: none;
+}
+
+section.work .card-wrapper .card img {
+  height: 100%;
+  width: 100%;
+}
+
+section.services {
+  background: var(--light);
+}
+
+section.services .card-wrapper {
+  margin-top: 7rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 2rem;
+  grid-row-gap: 6rem;
+}
+
+section.services .card-wrapper .card {
+  background: var(--pure);
+  padding: 3rem 2rem;
+  position: relative;
+  padding-top: 5rem;
+  text-align: center;
+  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+}
+
+section.services .card-wrapper .card img {
+  position: absolute;
+  top: -3.5rem;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+section.services .card-wrapper .card h2 {
+  font-weight: 400;
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+}
+
+section.services .card-wrapper .card p {
+  font-family: "Lato", sans-serif;
+  color: var(--ternary);
+  line-height: 1.6;
+}
+
+section.services .card-wrapper .card:hover {
+  background: var(--dark);
+}
+
+section.services .card-wrapper .card:hover h2,
+section.services .card-wrapper .card:hover p {
+  color: var(--pure);
 }
