--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@ header nav .left a {
 
 header nav .left a:hover {
   color: var(--primary);
+  font-size: 1.1rem;
 }
 
 .carousel-container {
@@ -245,4 +246,167 @@ section.services .card-wrapper .card:hover {
 section.services .card-wrapper .card:hover h2,
 section.services .card-wrapper .card:hover p {
   color: var(--pure);
+}
+
+section.about .about-me-img {
+  height: 450px;
+  margin-right: 30px;
+}
+
+section.about h1 {
+  margin-bottom: 1rem;
+  font-size: 1.6rem;
+  font-weight: 400;
+}
+
+section.about h1 span {
+  color: var(--primary);
+}
+
+section.about h3 {
+  color: #ff0000;
+  font-size: 1rem;
+  margin-bottom: 1rem;
+  font-weight: 400;
+}
+
+section.about p {
+  font-family: "Lato", sans-serif;
+  color: var(--ternary);
+  line-height: 1.9;
+  margin-bottom: 2rem;
+}
+
+section.blog {
+  background: var(--dark);
+  padding-bottom: 6rem;
+}
+
+section.blog .section-heading {
+  color: var(--pure);
+}
+
+section.blog .card-wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 3rem;
+}
+
+section.blog .card-wrapper .card {
+  background: var(--pure);
+}
+
+section.blog .card-wrapper .card .img-wrapper img {
+  width: 100%;
+  height: 100%;
+}
+
+section.blog .card-wrapper .card .card-content {
+  padding: 1rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+section.blog .card-wrapper .card .card-content h1 {
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+section.blog .card-wrapper .card .card-content a {
+  color: var(--secondary);
+  text-decoration: none;
+}
+
+section.blog .card-wrapper .card .card-content a:hover {
+  color: var(--primary);
+}
+
+section.blog .card-wrapper .card .card-content span {
+  color: var(--ternary);
+  font-size: 0.8rem;
+}
+
+section.blog .card-wrapper .card .card-content p {
+  font-family: "Lato", sans-serif;
+  color: var(--ternary);
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+section.blog .card-wrapper .card .card-content a.read-more {
+  font-size: 0.8rem;
+}
+
+.testimonial {
+  width: 90%;
+  max-width: 800px;
+  margin: auto;
+}
+
+.testimonial-text {
+  background: var(--primary);
+  color: var(--pure);
+  width: 100%;
+  height: 320px;
+  position: relative;
+  box-shadow: 1 15px 20px rgba(0، 0، 0، 0۔2);
+}
+
+.user-text {
+  width: 80%;
+  text-align: center;
+  line-height: 30px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
+}
+
+.user-text.active-text {
+  display: block;
+  animation: moveup 1s linear forwards;
+}
+
+.user-text .fa {
+  font-size: 30px;
+  margin-bottom: 50px;
+  margin-top: 20px;
+}
+
+.user-text span {
+  display: block;
+  font-size: 13px;
+  margin-top: 70px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.testimonial-pic {
+  margin-top: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.user-pic {
+  width: 65px;
+  padding: 5px;
+  border-radius: 50%;
+  margin: 10px;
+  cursor: pointer;
+}
+
+.user-pic.active-pic {
+  width: 100px;
+  border: 3px solid var(--primary);
+}
+
+@keyframes moveup {
+  0% {
+    margin-top: 25px;
+  }
+  100% {
+    margin-top: 0px;
+  }
 }
