Add Testimonials section

--- a/css/style.css
+++ b/css/style.css
@@ -359,6 +359,7 @@ section.blog .card-wrapper .card .card-content a.read-more {
   position: absolute;
   top: 50%;
   left: 50%;
+  font-weight: 500;
   transform: translate(-50%, -50%);
   display: none;
 }
