--- a/css/style.css
+++ b/css/style.css
@@ -20,44 +20,17 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-.container {
-  max-width: 100vw;
-  padding: 0 15px;
-  margin: 0 auto;
-}
-
 header {
-  background-color: var(--pure);
-  /* background: linear-gradient(to right, #00093c, #2d0b00);
-  opacity: 0.9; */
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 70px;
-  z-index: 9999;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
+  width: 100%;
+  height: 100vh;
+  background-position: center;
+  background-size: cover;
 }
 
-.container {
-  max-width: 100vw;
-  padding: 0 15px;
-  margin: 0 20px;
-}
-
-header nav {
-  padding: 0.5rem 0;
-}
-
-header nav .branding {
-  margin-right: 3rem;
-}
-
-header nav .left a {
-  color: var(--dark);
-  text-decoration: none;
-  margin-right: 2rem;
-  text-transform: uppercase;
+nav {
+  width: 100%;
+  padding: 20px 0;
+  text-align: center;
   transition: all 0.3s ease;
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
@@ -65,64 +38,115 @@ header nav .left a {
   -o-transition: all 0.3s ease;
 }
 
-header nav .left a:hover {
-  color: var(--primary);
-  font-size: 1.1rem;
-}
-
-.carousel-container {
-  max-width: 100vw;
-  height: 500px;
-  position: relative;
-  margin-top: 70px !important;
-  margin: auto;
-}
-
-.navigation .prev {
-  position: absolute;
-  z-index: 10;
-  font-size: 25px;
-  top: 40%;
-  font-weight: 700;
-}
-.navigation .next {
-  right: 0px;
-  position: absolute;
-  font-size: 25px;
-  z-index: 10;
-  top: 40%;
-}
-.navigation .nav-btn {
-  background: rgba(255, 255, 255, 0.3);
+.logo {
+  width: 80px;
+  margin: 5px 0;
   cursor: pointer;
-  width: 30px;
-  height: 30px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 30px 20px;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
-}
-.navigation .nav-btn:hover {
-  background: white;
 }
 
-.carousel {
-  transition: all 0.3s ease;
-}
-.carousel img {
-  max-width: 100%;
-  object-fit: cover;
-  transition: all 0.3s ease;
+nav ul {
+  /* background: linear-gradient(to right, #070606, #161616); */
+  width: 100%;
+  margin-top: 5px;
 }
 
-.item {
+nav ul li {
+  display: inline-block;
+  list-style: none;
+  margin: 20px 30px;
+  color: var(--pure);
+}
+
+nav ul li a {
+  text-decoration: none;
+  font-weight: 400;
+}
+
+nav ul li a:hover {
+  color: var(--primary);
+}
+
+.search {
   position: absolute;
-  display: none;
+  left: 50%;
+  top: 60%;
+  width: 90%;
+  max-width: 900px;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: var(--pure);
 }
 
-.main {
-  display: block;
+.search h1 {
+  font-size: 2rem;
+  font-weight: 600;
+  margin-bottom: 40px;
+}
+
+.search form {
+  background: transparent;
+  border: 2px solid var(--pure);
+  padding: 10px;
+  border-radius: 50px;
+  display: flex;
+}
+
+.search form input {
+  flex: 1;
+  border: none;
+  outline: none;
+  padding: 0 20px;
+  font-size: 16px;
+  color: var(--pure);
+}
+
+.search form input::placeholder {
+  color: var(--pure);
+}
+
+.search form .fas {
+  color: var(--pure);
+  padding: 10px;
+  cursor: pointer;
+}
+
+nav.sticky {
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 0px 8%;
+  background: linear-gradient(to right, #00093c, #2d0b00);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom-right-radius: 125px;
+  z-index: 1;
+  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+}
+
+nav.sticky ul {
+  width: auto;
+  background: transparent;
+}
+
+nav.sticky .logo {
+  width: 50px;
+}
+
+.container {
+  max-width: 100vw;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+.container {
+  max-width: 100vw;
+  padding: 0 15px;
+  margin: 0 20px;
 }
 
 section {
@@ -148,7 +172,6 @@ section {
 }
 
 section.work {
-  padding: 6rem 0;
   background: var(--pure);
 }
 
