--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,22 @@ nav.sticky .logo {
   margin: 0 auto;
 }
 
+.about-us {
+  position: absolute;
+  left: 50%;
+  top: 55%;
+  width: 90%;
+  max-width: 900px;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: var(--primary);
+}
+
+.about-us h1 {
+  font-size: 5rem;
+  font-weight: 500;
+}
+
 .container {
   max-width: 100vw;
   padding: 0 15px;
@@ -275,7 +291,8 @@ section.services .card-wrapper .card:hover p {
 }
 
 section.about .about-me-img {
-  height: 450px;
+  height: 520px;
+  width: 650px;
   margin-right: 30px;
 }
 
