--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ nav {
   width: 100%;
   padding: 20px 0;
   text-align: center;
+  z-index: -1;
   transition: all 0.3s ease;
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
@@ -64,6 +65,57 @@ nav ul li a {
 
 nav ul li a:hover {
   color: var(--primary);
+}
+
+.carousel-container {
+  max-width: 100vw;
+  max-height: 100%;
+  overflow: hidden;
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  margin: auto;
+}
+
+.navigation .prev {
+  position: absolute;
+  font-size: 55px;
+  top: 40%;
+}
+.navigation .next {
+  right: 0px;
+  position: absolute;
+  font-size: 55px;
+  top: 40%;
+}
+.navigation .nav-btn {
+  background: transparent;
+  cursor: pointer;
+  color: var(--pure);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 30px 20px;
+}
+.navigation .nav-btn:hover {
+  color: var(--primary);
+}
+
+.carousel {
+  transition: all 0.3s ease;
+}
+.carousel img {
+  max-width: 100%;
+  object-fit: cover;
+  transition: all 0.3s ease;
+}
+
+.item {
+  display: none;
+}
+
+.main {
+  display: block;
 }
 
 .search {
@@ -595,6 +647,72 @@ hr {
   top: 0;
   left: 10px;
   animation: moving 2s linear infinite;
+}
+
+section.our-team {
+  background: var(--light);
+}
+
+section.our-team .container {
+  text-align: center;
+}
+
+.teams {
+  max-width: 100vw;
+  /* padding: 48px 0; */
+  margin: 0 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.team {
+  margin: 10px;
+  padding: 30px;
+  max-width: 30%;
+  cursor: pointer;
+  transition: 0.4s;
+  box-sizing: border-box;
+  background: var(--pure);
+  border-radius: 10px;
+}
+
+.team img {
+  width: 200px;
+  height: 200px;
+}
+
+.team .name {
+  padding: 12px;
+  font-weight: bold;
+  font-size: 16px;
+  text-transform: uppercase;
+}
+
+.team .desig {
+  font-style: italic;
+  color: var(--dark);
+}
+
+.team .about {
+  margin: 20px 0;
+  font-weight: lighter;
+  color: var(--dark);
+}
+
+.team .social-links a {
+  display: inline-block;
+  height: 30px;
+  width: 30px;
+  transition: 0.4s;
+}
+
+.team .social-links a i:hover {
+  transform: scale(1.5);
+  color: var(--primary);
+}
+
+.team .social-links a i {
+  color: var(--dark);
 }
 
 @media (max-width: 700px) {
