--- a/css/style.css
+++ b/css/style.css
@@ -987,6 +987,37 @@ section.mission-stmt .card-wrapper .card p {
   width: 100%;
   height: 100%;
 }
+
+.videos-gallery {
+  width: 80%;
+  margin: 20px auto;
+}
+
+.videos-gallery h1 {
+  padding: 20px 0;
+  color: var(--secondary);
+  font-size: 44px;
+  text-align: center;
+}
+
+.video-row {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.video-col {
+  flex-basis: 50%;
+  min-width: 250px;
+}
+
+.feature-img {
+  width: 83%;
+  margin: auto;
+  position: relative;
+  border-radius: 6px;
+  overflow: hidden;
+}
 @media (max-width: 700px) {
   footer {
     bottom: unset;
