--- a/css/style.css
+++ b/css/style.css
@@ -1012,12 +1012,43 @@ section.mission-stmt .card-wrapper .card p {
 }
 
 .feature-img {
-  width: 83%;
   margin: auto;
   position: relative;
   border-radius: 6px;
   overflow: hidden;
 }
+
+.feature-img iframe {
+  width: 100%;
+  height: 315px;
+}
+
+.small-img-row {
+  display: flex;
+  background: var(--light);
+  margin: 20px;
+  align-items: center;
+  border-radius: 6px;
+  overflow: hidden;
+  width: 85%;
+}
+
+.small-img {
+  position: relative;
+}
+
+.small-img iframe {
+  width: 100px;
+}
+
+.small-img-row p {
+  margin-left: 20px;
+  color: var(--dark);
+  line-height: 22px;
+  font-size: 15px;
+  padding: 10px;
+}
+
 @media (max-width: 700px) {
   footer {
     bottom: unset;
@@ -1063,6 +1094,19 @@ section.mission-stmt .card-wrapper .card p {
   .map {
     min-height: 300px;
     padding: 30px;
+  }
+
+  .video-col {
+    flex-direction: column;
+    flex-basis: 100%;
+  }
+
+  .small-img {
+    display: none;
+  }
+
+  .small-img-row p {
+    margin-left: 0px;
   }
 }
 
