Regal Emporium Project added

--- a/css/style.css
+++ b/css/style.css
@@ -1056,19 +1056,13 @@ section.mission-stmt .card-wrapper .card p {
   padding: 40px 100px;
 }
 
-.single-project .title {
-  font-size: 2rem;
-}
-.single-project .title h2 {
-  font-weight: 500;
+.project-content {
+  grid-area: project-content;
 }
 
-.content {
-  grid-area: content;
-}
-
-.info {
-  grid-area: info;
+.project-inquiry {
+  grid-area: project-inquiry;
+  height: 650px;
 }
 
 .project {
@@ -1080,10 +1074,18 @@ section.mission-stmt .card-wrapper .card p {
 .project-box {
   position: relative;
   display: grid;
-  grid-template-columns: 2.5fr 0.5fr;
-  grid-template-areas: "content info";
+  grid-template-columns: 2fr 1fr;
+  grid-template-areas: "project-content project-inquiry";
   grid-gap: 20px;
   margin-top: 20px;
+}
+
+.project h1 {
+  color: var(--dark);
+  font-weight: 600;
+  font-size: 2rem;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .project h3 {
@@ -1091,6 +1093,39 @@ section.mission-stmt .card-wrapper .card p {
   font-weight: 500;
   font-size: 1.4rem;
   margin-top: 10px;
+}
+
+.project h4 {
+  color: var(--dark);
+  font-weight: bold;
+  font-size: 1rem;
+  margin-top: 10px;
+}
+
+.project-content p {
+  color: var(--secondary);
+  line-height: 1.5rem;
+}
+
+.project-content a {
+  color: var(--primary);
+  text-decoration: none;
+  font-size: 1.1em;
+}
+
+.project-content ul {
+  list-style-position: inside;
+  list-style-type: circle;
+  padding: 5px;
+  margin-left: 20pt;
+}
+
+.project-content ul li {
+  list-style-type: circle;
+}
+
+.project-content img {
+  width: 100%;
 }
 
 .form-box {
@@ -1222,6 +1257,15 @@ section.mission-stmt .card-wrapper .card p {
 
   .small-img-row p {
     margin-left: 0px;
+  }
+
+  .single-project {
+    padding: 10px;
+  }
+  .project-box {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    grid-template-areas: "project-content" "project-inquiry";
   }
 }
 
