--- a/css/style.css
+++ b/css/style.css
@@ -427,6 +427,60 @@ section.blog .card-wrapper .card .card-content a.read-more {
   font-size: 0.8rem;
 }
 
+section.business-insights {
+  background: var(--light);
+}
+
+section.business-insights .card-wrapper {
+  margin-top: 7rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 2rem;
+  grid-row-gap: 6rem;
+}
+
+section.services .card-wrapper .card {
+  background: var(--pure);
+  padding: 3rem 2rem;
+  position: relative;
+  padding-top: 5rem;
+  text-align: center;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+}
+
+section.business-insights .card-wrapper .card img {
+  position: absolute;
+  top: -3.5rem;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+section.business-insights .card-wrapper .card h2 {
+  font-weight: 400;
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+}
+
+section.business-insights .card-wrapper .card p {
+  font-family: "Lato", sans-serif;
+  color: var(--ternary);
+  line-height: 1.6;
+}
+
+section.business-insights .card-wrapper .card:hover {
+  background: var(--dark);
+}
+
+section.business-insights .card-wrapper .card:hover h2,
+section.business-insights .card-wrapper .card:hover p {
+  color: var(--pure);
+}
+
 .testimonial {
   width: 90%;
   max-width: 800px;
