Business insights page research part is done

--- a/css/style.css
+++ b/css/style.css
@@ -432,18 +432,17 @@ section.business-insights {
 }
 
 section.business-insights .card-wrapper {
-  margin-top: 7rem;
+  margin-top: 2rem;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 2rem;
   grid-row-gap: 6rem;
 }
 
-section.services .card-wrapper .card {
+section.business-insights .card-wrapper .card {
   background: var(--pure);
   padding: 3rem 2rem;
   position: relative;
-  padding-top: 5rem;
   text-align: center;
   cursor: pointer;
   transition: all 0.3s ease;
@@ -451,13 +450,6 @@ section.services .card-wrapper .card {
   -moz-transition: all 0.3s ease;
   -ms-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
-}
-
-section.business-insights .card-wrapper .card img {
-  position: absolute;
-  top: -3.5rem;
-  left: 50%;
-  transform: translateX(-50%);
 }
 
 section.business-insights .card-wrapper .card h2 {
@@ -479,6 +471,33 @@ section.business-insights .card-wrapper .card:hover {
 section.business-insights .card-wrapper .card:hover h2,
 section.business-insights .card-wrapper .card:hover p {
   color: var(--pure);
+}
+
+section.research {
+  /* padding-bottom: 6rem; */
+  padding-left: 60px;
+}
+
+section.research h1 {
+  color: var(--pure);
+  font-size: 3rem;
+  margin-bottom: 1rem;
+  font-weight: 300;
+}
+
+section.research p {
+  font-family: "Lato", sans-serif;
+  color: var(--pure);
+  letter-spacing: normal;
+  line-height: 1.9;
+  margin-bottom: 3rem;
+  width: 380px;
+}
+
+section.research .bar-line {
+  width: 50px;
+  border: 1px solid var(--pure);
+  margin-bottom: 1rem;
 }
 
 .testimonial {
