--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,8 @@ body {
 header {
   width: 100%;
   height: 100vh;
-  background-position: center;
-  background-size: cover;
+  /* background-position: center;
+  background-size: cover; */
 }
 
 nav {
@@ -65,6 +65,59 @@ nav ul li a {
 
 nav ul li a:hover {
   color: var(--primary);
+}
+
+.sub-menu-wrap {
+  position: absolute;
+  top: 100%;
+  left: 25%;
+  width: 340px;
+  max-height: 0px;
+  overflow: hidden;
+  transition: max-height 0.5s;
+}
+
+.sub-menu-wrap.open-menu {
+  max-height: 400px;
+}
+
+.sub-menu {
+  background: var(--pure);
+  padding: 5px 20px;
+  margin: 5px;
+}
+
+.sub-menu-link {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: var(--dark);
+  margin: 12px 0;
+}
+
+.sub-menu-link p {
+  /* width: 100%; */
+  text-transform: uppercase;
+}
+
+.sub-menu-link:hover p {
+  font-weight: 600;
+  color: var(--primary);
+}
+
+.checkbtn {
+  position: absolute;
+  right: 5%;
+  margin-right: 40px;
+  font-size: 30px;
+  color: var(--pure);
+  line-height: 80px;
+  cursor: pointer;
+  display: none;
+}
+
+#check {
+  display: none;
 }
 
 .carousel-container {
@@ -1589,6 +1642,42 @@ section.mission-stmt .card-wrapper .card p {
 }
 
 @media (max-width: 700px) {
+  .checkbtn {
+    display: block;
+  }
+
+  header {
+    height: 50px;
+  }
+  .carousel-container {
+    display: none;
+  }
+
+  .logo {
+    width: 50px;
+  }
+  nav {
+    max-height: 80px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 0px 8%;
+    background: linear-gradient(to right, #00093c, #2d0b00);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* border-bottom-right-radius: 125px; */
+    z-index: 1;
+    transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+  }
+
+  nav ul li {
+    display: none;
+  }
   section.contact {
     padding: 50px;
   }
