--- a/css/style.css
+++ b/css/style.css
@@ -1653,6 +1653,10 @@ section.mission-stmt .card-wrapper .card p {
     display: none;
   }
 
+  .search {
+    display: none;
+  }
+
   .logo {
     width: 50px;
   }
@@ -1661,7 +1665,7 @@ section.mission-stmt .card-wrapper .card p {
     position: fixed;
     top: 0;
     left: 0;
-    padding: 0px 8%;
+    padding: 5%;
     background: linear-gradient(to right, #00093c, #2d0b00);
     display: flex;
     align-items: center;
@@ -1675,11 +1679,96 @@ section.mission-stmt .card-wrapper .card p {
     -o-transition: all 0.3s ease;
   }
 
+  nav ul {
+    position: fixed;
+    width: 100%;
+    max-height: 100vh;
+    background: var(--dark);
+    top: 55px;
+    left: 0;
+    text-align: center;
+  }
+
   nav ul li {
     display: none;
   }
+
+  #check:checked ~ ul {
+    left: 0;
+  }
+
+  section {
+    padding: 2rem;
+  }
+
+  .container {
+    width: 100%;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+  }
+
+  section.work {
+    padding: 50px 30px;
+  }
+
+  section.work .card-wrapper {
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 1rem;
+  }
+
+  section.products {
+    padding: 50px 30px;
+  }
+
+  section.products .card-wrapper {
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 1rem;
+  }
+
+  section.services {
+    padding: 50px 30px;
+  }
+
+  section.services .card-wrapper {
+    margin-top: 2rem;
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  section.services .card-wrapper .card:nth-of-type(1) {
+    margin-top: 40px;
+  }
+
+  section.blog {
+    padding: 50px 30px;
+  }
+
+  section.blog .card-wrapper {
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 1.5rem;
+  }
+
+  section.about {
+    padding: 50px 30px;
+    margin-top: 30px;
+  }
+
+  section.about .about-me-img {
+    width: 400px;
+    height: auto;
+    margin-right: 0px;
+  }
+
+  .section-heading + p {
+    margin-bottom: 2rem;
+  }
+
+  .testimonial-text {
+    height: 400px;
+  }
+
   section.contact {
-    padding: 50px;
+    padding: 50px 30px;
   }
 
   section.contact .container .content {
@@ -1687,8 +1776,12 @@ section.mission-stmt .card-wrapper .card p {
     flex-direction: column;
   }
 
+  section.contact .contactInfo .box {
+    padding: 0;
+  }
+
   section.contact .container .contactInfo {
-    margin-bottom: 40px;
+    margin-bottom: 80px;
   }
 
   footer {
@@ -1757,6 +1850,33 @@ section.mission-stmt .card-wrapper .card p {
     grid-template-columns: 1fr;
     grid-template-rows: auto;
     grid-template-areas: "project-content" "project-inquiry";
+  }
+}
+
+@media (max-width: 480px) {
+  section {
+    padding: 3rem 2rem;
+  }
+
+  section.about .about-me-img {
+    width: 300px;
+  }
+
+  section.contact .contactInfo .box .text {
+    font-size: 12px;
+  }
+
+  .testimonial-pic {
+    margin-top: 10px;
+  }
+
+  .user-pic {
+    width: 50px;
+    padding: 2px;
+    margin: 5px;
+  }
+  .user-pic.active-pic {
+    width: 70px;
   }
 }
 
