--- a/css/style.css
+++ b/css/style.css
@@ -1851,6 +1851,82 @@ section.mission-stmt .card-wrapper .card p {
     grid-template-rows: auto;
     grid-template-areas: "project-content" "project-inquiry";
   }
+
+  section.ceo-msg {
+    padding: 20px;
+  }
+
+  section.ceo-msg .card-wrapper {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  section.ceo-msg .card-wrapper .card {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+  }
+
+  section.mission-stmt {
+    padding: 20px;
+  }
+
+  section.mission-stmt .card-wrapper {
+    margin-top: auto;
+    grid-template-columns: repeat(1, 1fr);
+    grid-row-gap: 2rem;
+  }
+
+  section.our-team {
+    padding: 40px 0px;
+  }
+
+  .teams {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .team {
+    max-width: 100%;
+  }
+
+  section.business-insights .card-wrapper {
+    margin-top: 1rem;
+    grid-template-columns: repeat(1, 1fr);
+    grid-row-gap: 2rem;
+  }
+
+  section.research {
+    padding-left: 20px;
+  }
+
+  section.research h1 {
+    font-size: 2rem;
+  }
+
+  section.research p {
+    width: 100%;
+  }
+
+  section.research-grid .card-wrapper {
+    grid-template-columns: repeat(1, 1fr);
+    grid-row-gap: 1rem;
+  }
+
+  section.articles h1 {
+    font-size: 2rem;
+  }
+
+  section.articles p {
+    width: 100%;
+  }
+
+  section.blog-grid .card-wrapper {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  section.news-grid .card-wrapper {
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 1rem;
+  }
 }
 
 @media (max-width: 480px) {
