--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,27 @@ header {
   background-size: cover; */
 }
 
+.upper-header {
+  width: 100%;
+  background: var(--pure);
+  padding: 10px 250px;
+  text-align: right;
+}
+
+.upper-header ul li {
+  display: inline-block;
+  list-style: none;
+  justify-content: unset;
+  margin: 0px 10px;
+  color: var(--dark);
+}
+
+.upper-header ul li a {
+  text-decoration: none;
+  font-weight: 600;
+  color: var(--dark);
+}
+
 nav {
   width: 100%;
   padding: 20px 0;
@@ -128,8 +149,8 @@ nav ul li a:hover {
   max-height: 100%;
   overflow: hidden;
   position: absolute;
-  top: 0%;
-  left: 0%;
+  /* top: 0%; */
+  /* left: 0%; */
   margin: auto;
 }
 
