--- a/css/style.css
+++ b/css/style.css
@@ -1540,28 +1540,32 @@ section.mission-stmt .card-wrapper .card p {
 .project h1 {
   color: var(--dark);
   font-weight: 600;
-  font-size: 2rem;
+  font-size: 2.2rem;
   margin-top: 10px;
   margin-bottom: 10px;
 }
 
-.project h3 {
+.project h2 {
   color: var(--dark);
-  font-weight: 500;
-  font-size: 1.4rem;
+  font-weight: 600;
+  font-size: 1.5rem;
   margin-top: 10px;
 }
 
-.project h4 {
+.project h3 {
   color: var(--dark);
   font-weight: bold;
-  font-size: 1rem;
+  font-size: 1.1rem;
   margin-top: 10px;
+  line-height: 3rem;
 }
 
 .project-content p {
-  color: var(--secondary);
+  color: var(--dark);
   line-height: 1.5rem;
+  font-weight: 300;
+  letter-spacing: normal;
+  text-align: justify;
 }
 
 .project-content a {
