--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 @import "utilities.css";
 
 :root {
+  --base: #354579;
+  --premium: #7acef3;
+  --card: #ec4912;
+  --core: #c22216;
   --primary: #fbb040;
   --dark: #161616;
   --pure: #ffffff;
@@ -288,6 +292,7 @@ section {
   font-family: "Lato", sans-serif;
   margin-bottom: 4rem;
   text-align: center;
+  font-size: 1.2rem;
 }
 
 section.work {
@@ -311,7 +316,7 @@ section.work .card-wrapper .card .overlay {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(249, 174, 65, 0.8);
+  background: rgba(249, 174, 65, 0.7);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -331,7 +336,7 @@ section.work .card-wrapper .card:hover .overlay {
 }
 
 section.work .card-wrapper .card .overlay a {
-  color: var(--secondary);
+  color: var(--pure);
   text-decoration: none;
 }
 
@@ -398,7 +403,7 @@ section.services .card-wrapper {
 }
 
 section.services .card-wrapper .card {
-  background: var(--pure);
+  background: var(--premium);
   padding: 3rem 2rem;
   position: relative;
   padding-top: 5rem;
@@ -411,7 +416,11 @@ section.services .card-wrapper .card {
   -o-transition: all 0.3s ease;
 }
 
-section.services .card-wrapper .card img {
+section.services .card-wrapper .card .service-img {
+  width: 100px;
+  height: 100px;
+  padding: 60px;
+  background-color: var(--dark);
   position: absolute;
   top: -3.5rem;
   left: 50%;
@@ -419,22 +428,28 @@ section.services .card-wrapper .card img {
 }
 
 section.services .card-wrapper .card h2 {
-  font-weight: 400;
-  font-size: 1.2rem;
+  font-weight: 600;
+  font-size: 1.3rem;
   margin-bottom: 0.5rem;
+  color: var(--dark);
+  letter-spacing: normal;
 }
 
 section.services .card-wrapper .card p {
   font-family: "Lato", sans-serif;
-  color: var(--ternary);
+  color: var(--dark);
   line-height: 1.6;
+  letter-spacing: normal;
+  font-size: 1.1rem;
 }
 
 section.services .card-wrapper .card:hover {
-  background: var(--dark);
+  background: var(--base);
 }
 
-section.services .card-wrapper .card:hover h2,
+section.services .card-wrapper .card:hover h2 {
+  color: var(--primary);
+}
 section.services .card-wrapper .card:hover p {
   color: var(--pure);
 }
@@ -470,11 +485,15 @@ section.about .news-body {
 }
 
 section.blog {
-  background: var(--dark);
+  background: var(--base);
   padding-bottom: 6rem;
 }
 
 section.blog .section-heading {
+  color: var(--pure);
+}
+
+section.blog .section-description {
   color: var(--pure);
 }
 
