--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import "utilities.css";
 
 :root {
-  --base: #354579;
+  --base: #0f2c67;
   --premium: #7acef3;
   --card: #ec4912;
   --core: #c22216;
@@ -27,9 +27,9 @@ body {
 
 header {
   width: 100%;
-  height: 100vh;
-  /* background-position: center;
-  background-size: cover; */
+  height: 80vh;
+  /* background-position: center; */
+  background-size: cover;
 }
 
 nav {
@@ -76,7 +76,7 @@ nav ul li a:hover {
 .sub-menu-wrap {
   position: absolute;
   top: 100%;
-  left: 25%;
+  left: 27%;
   width: 340px;
   max-height: 0px;
   overflow: hidden;
@@ -88,7 +88,7 @@ nav ul li a:hover {
 }
 
 .sub-menu {
-  background: var(--pure);
+  background: var(--base);
   padding: 5px 20px;
   margin: 5px;
 }
@@ -97,7 +97,7 @@ nav ul li a:hover {
   display: flex;
   align-items: center;
   text-decoration: none;
-  color: var(--dark);
+  color: var(--pure);
   margin: 12px 0;
 }
 
@@ -181,7 +181,7 @@ nav ul li a:hover {
 .search {
   position: absolute;
   left: 50%;
-  top: 60%;
+  top: 50%;
   width: 90%;
   max-width: 900px;
   transform: translate(-50%, -50%);
@@ -190,9 +190,14 @@ nav ul li a:hover {
 }
 
 .search h1 {
-  font-size: 2rem;
+  font-size: 3rem;
   font-weight: 600;
-  margin-bottom: 40px;
+  color: var(--primary);
+  /* margin-bottom: 40px; */
+}
+
+.search p {
+  font-size: 1.2rem;
 }
 
 .search form {
@@ -226,12 +231,13 @@ nav.sticky {
   position: fixed;
   top: 0;
   left: 0;
-  padding: 0px 8%;
-  background: var(--dark);
+  padding: 10px 8%;
+  background: var(--base);
   /* background: linear-gradient(to right, #00093c, #2d0b00); */
   display: flex;
   align-items: center;
   justify-content: space-between;
+  box-shadow: 0px 2px 20px var(--dark);
   /* border-bottom-right-radius: 125px; */
   z-index: 1;
   transition: all 0.3s ease;
@@ -417,9 +423,7 @@ section.services .card-wrapper .card {
 }
 
 section.services .card-wrapper .card .service-img {
-  width: 100px;
-  height: 100px;
-  padding: 60px;
+  padding: 22px;
   background-color: var(--primary);
   position: absolute;
   top: -3.5rem;
@@ -427,12 +431,19 @@ section.services .card-wrapper .card .service-img {
   transform: translateX(-50%);
 }
 
+section.services .card-wrapper .card .service-img .fab {
+  text-align: center;
+  color: var(--pure);
+  font-size: 80px;
+  /* width: 100px; */
+}
+
 section.services .card-wrapper .card h2 {
-  font-weight: 500;
+  font-weight: 600;
   font-size: 1.5rem;
   margin-bottom: 0.5rem;
   color: var(--primary);
-  letter-spacing: normal;
+  letter-spacing: 0.8pt;
 }
 
 section.services .card-wrapper .card p {
@@ -452,7 +463,7 @@ section.services .card-wrapper .card:hover .service-img {
 }
 
 section.services .card-wrapper .card:hover h2 {
-  color: var(--dark);
+  color: var(--base);
 }
 section.services .card-wrapper .card:hover p {
   color: var(--dark);
@@ -489,7 +500,7 @@ section.about .news-body {
 }
 
 section.blog {
-  background: var(--base);
+  background: var(--core);
   padding-bottom: 6rem;
 }
 
@@ -557,7 +568,7 @@ section.blog .card-wrapper .card .card-content a.read-more {
 
 section.contact {
   position: relative;
-  background-color: var(--base);
+  background-color: var(--core);
   padding: 50px 100px;
   /* display: flex; */
   justify-content: center;
@@ -972,7 +983,7 @@ footer {
   position: relative;
   bottom: 0;
   /* background: linear-gradient(to right, #00093c, #2d0b00); */
-  background: var(--dark);
+  background: var(--base);
   color: var(--pure);
   padding-top: 70px;
   padding-bottom: 30px;
